# pdf2markdown

./: .env.example  .gitignore  CLAUDE.md  LOCAL.md  README.md  debug_config.py  directory-input-config.yaml  pyproject.toml
config/: default.sample.yaml
docs/: hld.md  lld.md
docs/plans/: library.md  skypilot_provider.md
docs/research/: cloud_instances_skypilot.md
src/pdf2markdown/: __init__.py
src/pdf2markdown/cli/: main.py
src/pdf2markdown/config/: schemas.py
src/pdf2markdown/parsers/document/: simple.py
src/pdf2markdown/parsers/page/: simple_llm.py
src/pdf2markdown/pipeline/: coordinator.py  worker.py
src/pdf2markdown/utils/: cache_manager.py
src/pdf_to_markdown/: __init__.py  __main__.py
src/pdf_to_markdown/api/: __init__.py  config.py  converter.py  exceptions.py  types.py
src/pdf_to_markdown/cli/: main.py
src/pdf_to_markdown/config/: schemas.py  settings.py
src/pdf_to_markdown/llm_providers/: __init__.py  factory.py  openai.py  transformers.py
src/pdf_to_markdown/parsers/document/: base.py  simple.py
src/pdf_to_markdown/parsers/page/: base.py  simple_llm.py
src/pdf_to_markdown/pipeline/: coordinator.py  progress.py  queue_manager.py  worker.py
src/pdf_to_markdown/templates/prompts/: ocr_extraction.j2
src/pdf_to_markdown/utils/: __init__.py  logger.py  statistics.py
src/pdf_to_markdown/validators/: __init__.py  base.py  factory.py  markdown_validator.py  repetition_validator.py
tests/: test_config.py  test_library_api.py  test_models.py
