[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-to-markdown"
dynamic = ["version"]
description = "Python application that leverages LLMs to convert technical PDF documents to well-structured Markdown"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["pdf", "markdown", "llm", "ocr", "conversion"]
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "pymupdf>=1.23.0",
  "Pillow>=10.0.0",
  "aiohttp>=3.9.0",
  "jinja2>=3.1.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0.0",
  "aiofiles>=23.0.0",
  "tqdm>=4.66.0",
  "click>=8.1.0",
  "rich>=13.0.0",
  "httpx>=0.25.0",
  "tenacity>=8.2.0",
  "openai>=1.0.0",
  "pymarkdownlnt>=0.9.12",
]

[project.urls]
Documentation = "https://github.com/yourusername/pdf-to-markdown#readme"
Issues = "https://github.com/yourusername/pdf-to-markdown/issues"
Source = "https://github.com/yourusername/pdf-to-markdown"

[project.scripts]
pdf-to-markdown = "pdf_to_markdown.__main__:main"

[tool.hatch.version]
path = "src/pdf_to_markdown/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "black>=23.0.0",
  "mypy>=1.5.0",
  "ruff>=0.1.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
format = [
  "black .",
  "ruff check --fix .",
]
lint = [
  "black --check .",
  "ruff check .",
  "mypy src/pdf_to_markdown",
]
typecheck = "mypy src/pdf_to_markdown"

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
  "types-aiofiles",
  "types-tqdm",
  "types-pyyaml",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pdf_to_markdown tests}"

[tool.coverage.run]
source_pkgs = ["pdf_to_markdown", "tests"]
branch = true
parallel = true
omit = [
  "src/pdf_to_markdown/__about__.py",
]

[tool.coverage.paths]
pdf_to_markdown = ["src/pdf_to_markdown", "*/pdf-to-markdown/src/pdf_to_markdown"]
tests = ["tests", "*/pdf-to-markdown/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true